# mmorpg-scraper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg
mmorpg_scraper/: app.py
mmorpg_scraper/scraper/: constants.py  exceptions.py  game_detail.py  game_list.py  headers_generator.py  request.py  scraper.py
tests/: crawl_all_games.py  test.py
