[metadata]
name = mmorpg_scraper
version = 0.0.1
author = Can Berke Horozal
author_email = canberkehorozal@gmail.com
description = create a description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/canberkeh/mmorpg-scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    beautifulsoup4>=4.10.0
    requests>=2.23.0